--- a/iot-server/package.json
+++ b/iot-server/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "prvi",
+  "name": "iot-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --experimental-sqlite index.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "mime-types": "^2.1.35",
     "prompt-sync": "^4.2.0"
