started with DOM elements

--- a/iot-server/.vscode/settings.json
+++ b/iot-server/.vscode/settings.json
@@ -6,5 +6,6 @@
             "name": "sensor_data",
             "database": "${workspaceFolder:iot-server}/sensor_data.db"
         }
-    ]
+    ],
+    "sqltools.useNodeRuntime": true
 }
